--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
       <div class="wrap page-lead-content">
         <h1>Kõnekoda</h1>
         <h2>Abiks kõnele ja sellega seotud asjadele.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Milleks ja millal pöörduda?</a> &nbsp;  &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">Registreeri</a>
+        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Miks ja millal pöörduda?</a> &nbsp;  &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">Võta ühendust</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
