--- a/_includes/post-list-bullets.html
+++ b/_includes/post-list-bullets.html
@@ -1,5 +1,10 @@
 <div class="bullets">
+
+	
 	{% for post in site.posts %}
+
+        {% if post.categories contains "blogi" %}	
+
 	<div class="bullet three-col-bullet">
 		<div class="bullet-icon">
 			<a href="{{ site.url }}{{ post.url }}"><img src="{{ site.url }}/images/{{ post.image.teaser }}" alt=""></a>
@@ -7,7 +12,9 @@
 		<div class="bullet-content">
 			<h2><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.excerpt | remove: '<p>' | remove: '</p>'}}</p>
+			<p>{{ post.date | date: "%d.%m.%y"}}</p>
 		</div><!-- /.bullet-content -->
 	</div><!-- /.bullet -->
+    {% endif %}
 	{% endfor %}
 </div><!-- /.bullets -->
