--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,7 +13,7 @@ layout: default
 		</div><!-- /.page-feature -->
 		{% endif %}
 		{% include breadcrumbs.html %}
-		<div class="page-title">
+		<div class="page-title" style="background-image:url({{ site.url }}/images/pealkirja-taust.JPG)" >
 			<h1>{{ page.title }}</h1>
 		</div>
 		<div class="inner-wrap">
