--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
       <div class="wrap page-lead-content">
         <h1>Kõnekoda</h1>
         <h2>Abiks kõnele ja sellega seotud asjadele.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Miks ja millal pöörduda?</a> &nbsp;  &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">Võta ühendust</a>
+        <a href="{{ site.url }}/millal-poorduda/" class="btn-inverse">Millal pöörduda?</a> &nbsp;  &nbsp; <a href="{{ site.url }}/vota-yhendust/" class="btn-inverse">Võta ühendust</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
@@ -48,14 +48,18 @@
 
       <div id="main" role="main">
         <div class="wrap">
-          <div class="page-title">
-            <h1>{{ page.title }}</h1>
-            {% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
-          </div>
           <div class="archive-wrap">
+
             <div class="page-content">
+
               {{ content }}
             </div><!-- /.page-content -->
+          
+          <!-- Blogi pealkiri ja blogi postituste formaat -->
+          <h2>Meie blogi ja tegemised</h2>
+
+          {% include post-list-bullets.html %}
+
           </div class="archive-wrap"><!-- /.archive-wrap -->
         </div><!-- /.wrap -->
       </div><!-- /#main -->
