--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -63,7 +63,7 @@
 				top: 0;
 				left: 0;
 				height: 2px;
-				@include transition(width 0.3s);
+				@include transition(width 0.5s);
 			}
 			&:before {
 				width: 100%;
@@ -90,7 +90,7 @@
 		@include span-columns(12);
 	}
 	@include media($large) {
-		@include span-columns(7);
+		@include span-columns(8);
 		ul {
 			position: absolute;
 			right: 0;
@@ -145,11 +145,20 @@
 #main {
 	.inner-wrap {
 		@include media($medium) {
-			@include span-columns(12);
+			@include span-columns(9);
 		}
 	}
+
 	.page-title {
 		@include fill-parent;
+		padding: 0.5em;
+		border: 2px solid #FFF;
+		border-radius: 10px;
+		width: 100%;
+		margin-left: 0px;
+		background-size: cover;
+
+
 	}
 	@at-root {
 		.page-content {
@@ -193,6 +202,14 @@
 			@include fill-parent;
 			.page-content {
 				@include reset-all;
+				@include fill-parent;
+			}
+		}
+		.poorduda-wrap {
+			@include fill-parent;
+			.page-content {
+				@include span-columns(1);
+				padding: 1em;
 				@include fill-parent;
 			}
 		}
@@ -241,10 +258,10 @@
 .page-lead-content {
 	padding: 1em;
 	@include media($medium) {
-		padding: 2em;
+		padding: 5em;
 	}
 	@include media($large) {
-		padding: 3em;
+		padding: 10em; // siit saab muuta avalehe pildi kõrgust
 	}
 	h1 {
 		@include font-size(48);
@@ -350,3 +367,16 @@
 		}
 	}
 }
+
+/*
+   Location
+
+#location {
+	.map {
+    display: block;
+    width: 100%;
+    height: 300px;
+}
+}
+
+   ========================================================================== */
