--- a/css/main.scss
+++ b/css/main.scss
@@ -53,3 +53,10 @@ sitemap: false
    ========================================================================== */
 
 @import "layout";
+
+
+.gm-map {
+    display: block;
+    width: 100%;
+    height: 300px;
+}
