--- a/_layouts/kontakt.html
+++ b/_layouts/kontakt.html
@@ -13,7 +13,7 @@ layout: kontaktleht
 		</div><!-- /.page-feature -->
 		{% endif %}
 		{% include breadcrumbs.html %}
-		<div class="page-title" style="background-image:url({{ site.url }}/images/pealkirja-taust.JPG)" >
+		<div class="page-title" style="background-image:url({{ site.url }}/images/taevataust.jpg)" >
 			<h1>{{ page.title }}</h1>
 			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
 		</div>
