--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -2,7 +2,7 @@
   <nav class="breadcrumbs">
     <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="{{ site.url }}" itemprop="url">
-        <span itemprop="title">Home</span>
+        <span itemprop="title">Avaleht</span>
       </a> › 
     <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="{{ site.url }}/{{ page.categories | first }}/" itemprop="url">
