--- a/_layouts/poorduda.html
+++ b/_layouts/poorduda.html
@@ -12,6 +12,7 @@ layout: default
 			</div><!-- /.page-image -->
 		</div><!-- /.page-feature -->
 		{% endif %}
+		{% include breadcrumbs.html %}
 		<div class="page-title" style="background-image:url({{ site.url }}/images/taevataust.jpg)">
 			<h1>{{ page.title }}</h1>
 			{% if page.excerpt %}<h2>{{ page.excerpt }}</h2>{% endif %}
