--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,8 +39,8 @@
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
         <h1>Kõnekoda</h1>
-        <h2>Abiks kõnele ja sellega seotud asjadele.</h2>
-        <a href="{{ site.url }}/millal-poorduda/" class="btn-inverse">Millal pöörduda?</a> &nbsp;  &nbsp; <a href="{{ site.url }}/vota-yhendust/" class="btn-inverse">Võta ühendust</a>
+        <h2>Logopeediline teraapia laste ja täiskasvanutega.</h2>
+        <a href="{{ site.url }}/vota-yhendust/" class="btn-inverse">Võta ühendust</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
